# server/src/main/java/mucsi96/traininglog/fitness/Fitness.java
@@ -1,0 +1,35 @@
+package mucsi96.traininglog.fitness;
+
+import java.time.ZonedDateTime;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.Id;
+import jakarta.persistence.Table;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@Entity
+@Table(schema = "training_log")
+@Builder
+@AllArgsConstructor
+@NoArgsConstructor
+public class Fitness {
+  @Id
+  private ZonedDateTime createdAt;
+
+  @Column
+  private ZonedDateTime pulledAt;
+
+  @Column
+  private float fitness;
+
+  @Column
+  private float fatigue;
+
+  @Column
+  private float form;
+}
