# server/src/main/resources/api.yml
@@ -69,21 +69,36 @@ paths:
           content:
             application/json:
               schema:
-                title: Fitness
+                title: FitnessTimeline
                 type: object
                 required:
-                  - fitness
-                  - fatigue
-                  - form
+                  - measurements
                 properties:
-                  fitness:
-                    type: number
-                    format: double
-                  fatigue:
-                    type: number
-                    format: double
-                  form:
-                    type: number
-                    format: double
+                  pulledAt:
+                    type: string
+                    format: date-time
+                  measurements:
+                    type: array
+                    items:
+                      title: FitnessMeasurement
+                      type: object
+                      required:
+                        - date
+                        - fitness
+                        - fatigue
+                        - form
+                      properties:
+                        date:
+                          type: string
+                          format: date-time
+                        fitness:
+                          type: number
+                          format: float
+                        fatigue:
+                          type: number
+                          format: float
+                        form:
+                          type: number
+                          format: float
 
 
